// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fleet-members/Payments Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title py-1"
    >
      <div
        class="layout align-center justify-space-between row"
      >
        <div
          class="flex"
        >
          <h3
            class="grey--text"
          >
            
          Payments
        
          </h3>
        </div>
         
        <div
          class="flex shrink"
        >
          <button
            class="v-btn theme--light primary"
            slot="activator"
            text=""
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--left material-icons theme--light"
              >
                add_circle_outline
              </i>
              Request New Payment
            
            </div>
          </button>
          <div
            class="v-dialog__container"
            style="display: inline-block;"
          >
            <div
              class="v-dialog__content"
              style="z-index: 0;"
              tabindex="-1"
            >
              <div
                class="v-dialog"
                style="max-width: 600px; display: none;"
              >
                 
                <div
                  class="v-card v-sheet theme--light"
                >
                  <div
                    class="d-flex justify-space-between align-center"
                  >
                    <div
                      class="v-card__text grey--text subheading font-weight-bold"
                    >
                      
                Request New Payment
              
                    </div>
                     
                    <button
                      class="white--text v-btn v-btn--depressed v-btn--round v-btn--small theme--light grey"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <div
                          class="flex"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon white--text fa fa fa fa-times theme--light"
                            style="font-size: 16px;"
                          />
                        </div>
                         
                        <div
                          class="flex"
                        >
                          
                  Close
                
                        </div>
                      </div>
                    </button>
                  </div>
                   
                  <hr
                    class="v-divider theme--light"
                  />
                   
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="layout"
    >
      <div
        class="flex xs12"
      >
        <div
          item-key="uuid"
        >
          <div
            class="ui-datatable elevation-1"
          >
            <div
              class="v-table__overflow"
            >
              <table
                class="v-datatable v-table v-datatable--select-all theme--light"
              >
                <thead>
                  <tr>
                    <th>
                      <div
                        class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <input
                                aria-checked="false"
                                role="checkbox"
                                type="checkbox"
                                value=""
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                check_box_outline_blank
                              </i>
                            </div>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      aria-label="Status: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Status
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Event name: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Event name
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Payment name: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Payment name
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Due date: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Due date
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Amount: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Amount
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Manage: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Manage
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                  </tr>
                  <tr
                    class="v-datatable__progress"
                  >
                    <th
                      class="column"
                      colspan="7"
                    />
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="text-xs-center"
                      colspan="7"
                    >
                      No matching records found
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
           
          <div
            class="layout align-center"
          >
            <div
              class="flex grow justify-center"
            >
              <div
                class="layout justify-center"
              >
                <ul
                  class="v-pagination theme--light"
                >
                  <li>
                    <button
                      class="v-pagination__navigation v-pagination__navigation--disabled"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        chevron_left
                      </i>
                    </button>
                  </li>
                  <li>
                    <button
                      class="v-pagination__item v-pagination__item--active primary"
                      type="button"
                    >
                      1
                    </button>
                  </li>
                  <li>
                    <button
                      class="v-pagination__navigation v-pagination__navigation--disabled"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        chevron_right
                      </i>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
             
            <div
              class="flex shrink"
            >
              <div
                class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
                role="combobox"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-select__slot"
                    >
                      <label
                        aria-hidden="true"
                        class="v-label v-label--active theme--light"
                        style="left: 0px; position: absolute;"
                      >
                        Results Per Page
                      </label>
                      <div
                        class="v-select__selections"
                      >
                        <div
                          class="v-select__selection v-select__selection--comma"
                        >
                          10
                        </div>
                        <input
                          aria-label="Results Per Page"
                          aria-readonly="false"
                          autocomplete="on"
                          readonly="readonly"
                          type="text"
                        />
                      </div>
                      <div
                        class="v-input__append-inner"
                      >
                        <div
                          class="v-input__icon v-input__icon--append"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon material-icons theme--light"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-menu"
                    >
                      <div
                        class="v-menu__content theme--light "
                        style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                      >
                        <div
                          class="v-select-list v-card theme--light"
                        >
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    5
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              class="primary--text"
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    10
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    15
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    25
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    30
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    50
                                  </div>
                                </div>
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <div
                        class="v-messages__wrapper"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`fleet-members/Payments Snapshots Loading 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title py-1"
    >
      <div
        class="layout align-center justify-space-between row"
      >
        <div
          class="flex"
        >
          <h3
            class="grey--text"
          >
            
          Payments
        
          </h3>
        </div>
         
        <div
          class="flex shrink"
        >
          <button
            class="v-btn theme--light primary"
            slot="activator"
            text=""
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--left material-icons theme--light"
              >
                add_circle_outline
              </i>
              Request New Payment
            
            </div>
          </button>
          <div
            class="v-dialog__container"
            style="display: inline-block;"
          >
            <div
              class="v-dialog__content"
              style="z-index: 0;"
              tabindex="-1"
            >
              <div
                class="v-dialog"
                style="max-width: 600px; display: none;"
              >
                 
                <div
                  class="v-card v-sheet theme--light"
                >
                  <div
                    class="d-flex justify-space-between align-center"
                  >
                    <div
                      class="v-card__text grey--text subheading font-weight-bold"
                    >
                      
                Request New Payment
              
                    </div>
                     
                    <button
                      class="white--text v-btn v-btn--depressed v-btn--round v-btn--small theme--light grey"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <div
                          class="flex"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon white--text fa fa fa fa-times theme--light"
                            style="font-size: 16px;"
                          />
                        </div>
                         
                        <div
                          class="flex"
                        >
                          
                  Close
                
                        </div>
                      </div>
                    </button>
                  </div>
                   
                  <hr
                    class="v-divider theme--light"
                  />
                   
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="layout"
    >
      <div
        class="flex xs12"
      >
        <div
          item-key="uuid"
        >
          <div
            class="ui-datatable elevation-1"
          >
            <div
              class="v-table__overflow"
            >
              <table
                class="v-datatable v-table v-datatable--select-all theme--light"
              >
                <thead>
                  <tr>
                    <th>
                      <div
                        class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <input
                                aria-checked="false"
                                role="checkbox"
                                type="checkbox"
                                value=""
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                check_box_outline_blank
                              </i>
                            </div>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      aria-label="Status: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Status
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Event name: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Event name
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Payment name: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Payment name
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Due date: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Due date
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Amount: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Amount
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Manage: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Manage
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                  </tr>
                  <tr
                    class="v-datatable__progress"
                  >
                    <th
                      class="column"
                      colspan="7"
                    >
                      <div
                        aria-valuemax="100"
                        aria-valuemin="0"
                        class="v-progress-linear"
                        role="progressbar"
                        style="height: 10px;"
                      >
                        <div
                          class="v-progress-linear__background primary"
                          style="height: 10px; opacity: 0.3; width: 100%;"
                        />
                        <div
                          class="v-progress-linear__bar"
                        >
                          <div
                            class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
                          >
                            <div
                              class="v-progress-linear__bar__indeterminate long primary"
                            />
                            <div
                              class="v-progress-linear__bar__indeterminate short primary"
                            />
                          </div>
                          <!---->
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="text-xs-center"
                      colspan="7"
                    >
                      No matching records found
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
           
          <div
            class="layout align-center"
          >
            <div
              class="flex grow justify-center"
            >
              <div
                class="layout justify-center"
              >
                <ul
                  class="v-pagination v-pagination--disabled theme--light"
                >
                  <li>
                    <button
                      class="v-pagination__navigation v-pagination__navigation--disabled"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        chevron_left
                      </i>
                    </button>
                  </li>
                  <li>
                    <button
                      class="v-pagination__item v-pagination__item--active primary"
                      type="button"
                    >
                      1
                    </button>
                  </li>
                  <li>
                    <button
                      class="v-pagination__navigation v-pagination__navigation--disabled"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        chevron_right
                      </i>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
             
            <div
              class="flex shrink"
            >
              <div
                class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
                role="combobox"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-select__slot"
                    >
                      <label
                        aria-hidden="true"
                        class="v-label v-label--active theme--light"
                        style="left: 0px; position: absolute;"
                      >
                        Results Per Page
                      </label>
                      <div
                        class="v-select__selections"
                      >
                        <div
                          class="v-select__selection v-select__selection--comma"
                        >
                          10
                        </div>
                        <input
                          aria-label="Results Per Page"
                          aria-readonly="false"
                          autocomplete="on"
                          readonly="readonly"
                          type="text"
                        />
                      </div>
                      <div
                        class="v-input__append-inner"
                      >
                        <div
                          class="v-input__icon v-input__icon--append"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon material-icons theme--light"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-menu"
                    >
                      <div
                        class="v-menu__content theme--light "
                        style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                      >
                        <div
                          class="v-select-list v-card theme--light"
                        >
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    5
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              class="primary--text"
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    10
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    15
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    25
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    30
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    50
                                  </div>
                                </div>
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <div
                        class="v-messages__wrapper"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`fleet-members/Payments Snapshots Populated 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
    page="1"
    rows-per-page="10"
    sort-by="uuid"
    total-items="35"
  >
    <div
      class="v-card__title py-1"
    >
      <div
        class="layout align-center justify-space-between row"
      >
        <div
          class="flex"
        >
          <h3
            class="grey--text"
          >
            
          Payments
        
          </h3>
        </div>
         
        <div
          class="flex shrink"
        >
          <button
            class="v-btn theme--light primary"
            slot="activator"
            text=""
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--left material-icons theme--light"
              >
                add_circle_outline
              </i>
              Request New Payment
            
            </div>
          </button>
          <div
            class="v-dialog__container"
            style="display: inline-block;"
          >
            <div
              class="v-dialog__content"
              style="z-index: 0;"
              tabindex="-1"
            >
              <div
                class="v-dialog"
                style="max-width: 600px; display: none;"
              >
                 
                <div
                  class="v-card v-sheet theme--light"
                >
                  <div
                    class="d-flex justify-space-between align-center"
                  >
                    <div
                      class="v-card__text grey--text subheading font-weight-bold"
                    >
                      
                Request New Payment
              
                    </div>
                     
                    <button
                      class="white--text v-btn v-btn--depressed v-btn--round v-btn--small theme--light grey"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <div
                          class="flex"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon white--text fa fa fa fa-times theme--light"
                            style="font-size: 16px;"
                          />
                        </div>
                         
                        <div
                          class="flex"
                        >
                          
                  Close
                
                        </div>
                      </div>
                    </button>
                  </div>
                   
                  <hr
                    class="v-divider theme--light"
                  />
                   
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="layout"
    >
      <div
        class="flex xs12"
      >
        <div
          item-key="uuid"
        >
          <div
            class="ui-datatable elevation-1"
          >
            <div
              class="v-table__overflow"
            >
              <table
                class="v-datatable v-table v-datatable--select-all theme--light"
              >
                <thead>
                  <tr>
                    <th>
                      <div
                        class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <input
                                aria-checked="false"
                                role="checkbox"
                                type="checkbox"
                                value=""
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                check_box_outline_blank
                              </i>
                            </div>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      aria-label="Status: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Status
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Event name: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Event name
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Payment name: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Payment name
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Due date: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Due date
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Amount: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Amount
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="Manage: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      <span>
                        
        Manage
      
                      </span>
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                  </tr>
                  <tr
                    class="v-datatable__progress"
                  >
                    <th
                      class="column"
                      colspan="7"
                    />
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      <div
                        class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                        primary=""
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <input
                                aria-checked="false"
                                primary=""
                                role="checkbox"
                                type="checkbox"
                                value=""
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                check_box_outline_blank
                              </i>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                     
                    <td
                      class="text-xs-undefined"
                    >
                      <button
                        class="v-btn theme--dark grey grey-text--text"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
  Pending
 
                          <i
                            aria-hidden="true"
                            class="v-icon v-icon--right material-icons theme--dark"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </button>
                      <div
                        class="v-menu"
                      >
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                           
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Pending
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Paid
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Failed
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Refunded
                                </div>
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      <div
                        class="subheading primary--text"
                      >
                        
            Random event name
          
                      </div>
                       
                      <div
                        class="grey--text"
                      >
                        
            Sep 09, 2020
          
                      </div>
                       
                      <div
                        class="grey--text"
                      >
                        
            @ Convention center
          
                      </div>
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      
              
            
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      
              2020-07-08
            
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      <div
                        class="grey--text"
                      >
                        
            $3.00
          
                      </div>
                    </td>
                    <td
                      class="justify-center text-xs-center"
                    >
                      <button
                        class="v-btn v-btn--depressed theme--light primary"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
            Pay now
          
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                        primary=""
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <input
                                aria-checked="false"
                                primary=""
                                role="checkbox"
                                type="checkbox"
                                value=""
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                check_box_outline_blank
                              </i>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                     
                    <td
                      class="text-xs-undefined"
                    >
                      <button
                        class="v-btn theme--dark grey grey-text--text"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
  Pending
 
                          <i
                            aria-hidden="true"
                            class="v-icon v-icon--right material-icons theme--dark"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </button>
                      <div
                        class="v-menu"
                      >
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                           
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Pending
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Paid
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Failed
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Refunded
                                </div>
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      <div
                        class="subheading primary--text"
                      >
                        
            Random event name
          
                      </div>
                       
                      <div
                        class="grey--text"
                      >
                        
            Sep 09, 2020
          
                      </div>
                       
                      <div
                        class="grey--text"
                      >
                        
            @ Convention center
          
                      </div>
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      
              
            
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      
              2020-07-08
            
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      <div
                        class="grey--text"
                      >
                        
            $3.00
          
                      </div>
                    </td>
                    <td
                      class="justify-center text-xs-center"
                    >
                      <button
                        class="v-btn v-btn--depressed theme--light primary"
                        style="display: none;"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
            
          
                        </div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                        primary=""
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <input
                                aria-checked="false"
                                primary=""
                                role="checkbox"
                                type="checkbox"
                                value=""
                              />
                              <div
                                class="v-input--selection-controls__ripple"
                              />
                              <i
                                aria-hidden="true"
                                class="v-icon material-icons theme--light"
                              >
                                check_box_outline_blank
                              </i>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                     
                    <td
                      class="text-xs-undefined"
                    >
                      <button
                        class="v-btn theme--dark grey grey-text--text"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
  Pending
 
                          <i
                            aria-hidden="true"
                            class="v-icon v-icon--right material-icons theme--dark"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </button>
                      <div
                        class="v-menu"
                      >
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                           
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Pending
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Paid
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Failed
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  Refunded
                                </div>
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      <div
                        class="subheading primary--text"
                      >
                        
            Random event name
          
                      </div>
                       
                      <div
                        class="grey--text"
                      >
                        
            Sep 09, 2020
          
                      </div>
                       
                      <div
                        class="grey--text"
                      >
                        
            @ Convention center
          
                      </div>
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      
              
            
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      
              2020-07-08
            
                    </td>
                    <td
                      class="text-xs-undefined"
                    >
                      <div
                        class="grey--text"
                      >
                        
            $3.00
          
                      </div>
                    </td>
                    <td
                      class="justify-center text-xs-center"
                    >
                      <button
                        class="v-btn v-btn--depressed theme--light primary"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
            Retry
          
                        </div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
           
          <div
            class="layout align-center"
          >
            <div
              class="flex grow justify-center"
            >
              <div
                class="layout justify-center"
              >
                <ul
                  class="v-pagination theme--light"
                >
                  <li>
                    <button
                      class="v-pagination__navigation v-pagination__navigation--disabled"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        chevron_left
                      </i>
                    </button>
                  </li>
                  <li>
                    <button
                      class="v-pagination__item v-pagination__item--active primary"
                      type="button"
                    >
                      1
                    </button>
                  </li>
                  <li>
                    <button
                      class="v-pagination__item"
                      type="button"
                    >
                      2
                    </button>
                  </li>
                  <li>
                    <button
                      class="v-pagination__item"
                      type="button"
                    >
                      3
                    </button>
                  </li>
                  <li>
                    <button
                      class="v-pagination__item"
                      type="button"
                    >
                      4
                    </button>
                  </li>
                  <li>
                    <button
                      class="v-pagination__navigation"
                      type="button"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        chevron_right
                      </i>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
             
            <div
              class="flex shrink"
            >
              <div
                class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
                role="combobox"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-select__slot"
                    >
                      <label
                        aria-hidden="true"
                        class="v-label v-label--active theme--light"
                        style="left: 0px; position: absolute;"
                      >
                        Results Per Page
                      </label>
                      <div
                        class="v-select__selections"
                      >
                        <div
                          class="v-select__selection v-select__selection--comma"
                        >
                          10
                        </div>
                        <input
                          aria-label="Results Per Page"
                          aria-readonly="false"
                          autocomplete="on"
                          readonly="readonly"
                          type="text"
                        />
                      </div>
                      <div
                        class="v-input__append-inner"
                      >
                        <div
                          class="v-input__icon v-input__icon--append"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon material-icons theme--light"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-menu"
                    >
                      <div
                        class="v-menu__content theme--light "
                        style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                      >
                        <div
                          class="v-select-list v-card theme--light"
                        >
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    5
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              class="primary--text"
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    10
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    15
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    25
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    30
                                  </div>
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    50
                                  </div>
                                </div>
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <div
                        class="v-messages__wrapper"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
